HelloUltraviolet/Fixtures/RejectedSource/Procedures/ProcedureDeclarationsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the ProcedureDeclarationsDiagnostic rejected-source specimen.

expectedDiagnostic("E-TYP-1507", "diag.15.ProcedureDeclarations")
